--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.16)
 project(LittleEngine)
 
-add_library(LittleEngine)
+add_library(LittleEngine STATIC)
 
 
 add_subdirectory(thirdparty/glfw-3.3.2)			#window oppener
@@ -13,6 +13,21 @@ add_subdirectory(thirdparty/miniaudio)			#audio
 add_subdirectory(thirdparty/glm)				#math
 add_subdirectory(thirdparty/imgui)				#ui
 
-target_sources(LittleEngine PRIVATE "src/little_engine.cpp" "include/LittleEngine/Graphics/shader.h" "src/Graphics/shader.cpp" "include/LittleEngine/error_logger.h" "include/LittleEngine/Graphics/camera.h" "src/Graphics/camera.cpp" "include/LittleEngine/Graphics/texture.h" "include/LittleEngine/internal.h" "src/Graphics/texture.cpp" "include/LittleEngine/Graphics/renderer.h" "src/Graphics/renderer.cpp" "include/LittleEngine/Graphics/color.h" "include/LittleEngine/Graphics/font.h" "src/Graphics/font.cpp" "include/LittleEngine/Graphics/default_font.h" "src/Graphics/tilemap_renderer.cpp" "src/Input/input.cpp" "src/Audio/audio.cpp" "src/Audio/sound.cpp" "include/LittleEngine/Audio/sound.h" "include/LittleEngine/Graphics/render_target.h" "src/Graphics/render_target.cpp" "src/Graphics/bitmap_helper.cpp" "include/LittleEngine/Graphics/bitmap_helper.h" "include/LittleEngine/Storage/storage_helper.h" "src/Storage/storage_helper.cpp") # add later "src/gl2dParticleSystem.cpp")
+target_sources(LittleEngine PRIVATE 
+	"src/little_engine.cpp" 
+	"src/Graphics/shader.cpp" 
+	"src/Graphics/camera.cpp" 
+	"src/Graphics/texture.cpp" 
+	"src/Graphics/renderer.cpp" 
+	"src/Graphics/font.cpp" 
+	"src/Graphics/tilemap_renderer.cpp" 
+	"src/Input/input.cpp" 
+	"src/Audio/audio.cpp" 
+	"src/Audio/sound.cpp" 
+	"src/Graphics/render_target.cpp" 
+	"src/Graphics/bitmap_helper.cpp" 
+	"src/Storage/storage_helper.cpp"
+) # add later "src/gl2dParticleSystem.cpp")
+
 target_include_directories(LittleEngine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_libraries(LittleEngine PUBLIC glm glad stb_image freetype glfw imgui miniaudio)
