refactored storage_helper to Utils::FileSystem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ target_sources(LittleEngine PRIVATE
 	"src/Audio/sound.cpp" 
 	"src/Graphics/render_target.cpp" 
 	"src/Graphics/bitmap_helper.cpp" 
-	"src/Storage/storage_helper.cpp"
+	"src/Utils/file_system.cpp"
  "include/LittleEngine/Math/geometry.h" "src/Math/geometry.cpp" "src/Graphics/lighting.cpp" "include/LittleEngine/UI/ui_system.h" "src/UI/ui_system.cpp" "include/LittleEngine/UI/ui_element.h" "src/UI/ui_element.cpp" "include/LittleEngine/UI/ui_context.h" "src/UI/ui_context.cpp" "include/LittleEngine/Math/random.h" "src/Math/random.cpp" "include/LittleEngine/Platform/GLFW/glfw_window.h" "src/Platform/GLFW/glfw_window.cpp" "include/LittleEngine/Core/window.h"  "include/LittleEngine/Platform/GLFW/platform_glfw.h" "include/LittleEngine/Platform/platform.h"  "src/Platform/GLFW/platform_glfw.cpp" "src/error_logger.cpp") # add later "src/gl2dParticleSystem.cpp")
 
 target_include_directories(LittleEngine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
