--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,31 @@ project(LittleEngine)
 add_library(LittleEngine STATIC)
 
 
-add_subdirectory(thirdparty/glfw-3.3.2)			#window oppener
+message(STATUS "PLATFORM = '${PLATFORM}'")
+
+# If platform is GLFW, include GLFW
+if(PLATFORM STREQUAL "GLFW")
+    set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+    set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+    set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
+
+    add_subdirectory(thirdparty/glfw-3.3.2)			#window oppener
+    target_compile_definitions(LittleEngine PUBLIC GLFW_INCLUDE_NONE=1) # Prevent GLFW from including OpenGL headers
+    target_compile_definitions(LittleEngine PUBLIC USE_GLFW)
+
+elseif(PLATFORM STREQUAL "SDL")
+    # Skip GLFW, maybe configure SDL instead
+    set(SDL2_STATIC_LIBRARIES ON)
+    find_package(SDL2 REQUIRED)
+    # Include SDL headers for your engine and game
+    target_include_directories(LittleEngine PUBLIC ${SDL2_INCLUDE_DIRS})
+    target_link_libraries(LittleEngine PUBLIC ${SDL2_LIBRARIES})
+
+    target_compile_definitions(LittleEngine PUBLIC USE_SDL)
+endif()
+
 add_subdirectory(thirdparty/glad)				#opengl loader
 add_subdirectory(thirdparty/stb_image)			#loading immaged
 add_subdirectory(thirdparty/freetype-2.13.3)	#loading ttf files
@@ -13,21 +37,9 @@ add_subdirectory(thirdparty/miniaudio)			#audio
 add_subdirectory(thirdparty/glm)				#math
 add_subdirectory(thirdparty/imgui)				#ui
 
-target_sources(LittleEngine PRIVATE 
-	"src/little_engine.cpp" 
-	"src/Graphics/shader.cpp" 
-	"src/Graphics/camera.cpp" 
-	"src/Graphics/texture.cpp" 
-	"src/Graphics/renderer.cpp" 
-	"src/Graphics/font.cpp" 
-	"src/Graphics/tilemap_renderer.cpp" 
-	"src/Input/input.cpp" 
-	"src/Audio/audio.cpp" 
-	"src/Audio/sound.cpp" 
-	"src/Graphics/render_target.cpp" 
-	"src/Graphics/bitmap_helper.cpp" 
-	"src/Utils/file_system.cpp"
- "include/LittleEngine/Math/geometry.h" "src/Math/geometry.cpp" "src/Graphics/lighting.cpp" "include/LittleEngine/UI/ui_system.h" "src/UI/ui_system.cpp" "include/LittleEngine/UI/ui_element.h" "src/UI/ui_element.cpp" "include/LittleEngine/UI/ui_context.h" "src/UI/ui_context.cpp" "include/LittleEngine/Math/random.h" "src/Math/random.cpp" "include/LittleEngine/Platform/GLFW/glfw_window.h" "src/Platform/GLFW/glfw_window.cpp" "include/LittleEngine/Core/window.h"  "include/LittleEngine/Platform/GLFW/platform_glfw.h" "include/LittleEngine/Platform/platform.h"  "src/Platform/GLFW/platform_glfw.cpp"  "include/LittleEngine/Utils/debug_tools.h" "src/Utils/debug_tools.cpp" "include/LittleEngine/Utils/logger.h" "src/Utils/logger.cpp") # add later "src/gl2dParticleSystem.cpp")
+# set the target source files
+file(GLOB_RECURSE MY_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+target_sources(LittleEngine PRIVATE ${MY_SOURCES})
 
 target_include_directories(LittleEngine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_libraries(LittleEngine PUBLIC glm glad stb_image freetype glfw imgui miniaudio)
